# grading_ms

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  dev.http  docker-compose.yml  requests.http
src/: database.rs  main.rs
src/helpers/: mod.rs  response.rs  serializer.rs
src/models/: category.rs  grade.rs  grading.rs  mod.rs
src/repositories/: grading.rs
src/routes/: categories.rs  grades.rs  grading.rs  mod.rs
