[package]
name = "aims_grading_ms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.3.0", default-features = false, features = ["async-std-runtime"] }
okapi = "0.7.0-rc.1"
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
schemars = "0.8.10"
serde = "1.0.144"